k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayalab-frontend
  namespace: ayalab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ayalab-frontend
  template:
    metadata:
      labels:
        app: ayalab-frontend
    spec:
      containers:
        - name: ayalab-frontend
          image: ayahosny/ayalab-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
