k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ayalab-frontend
  namespace: ayalab
spec:
  selector:
    app: ayalab-frontend
  ports:
    - port: 80
      targetPort: 80
