k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pointerlab-ingress
  namespace: pointerlab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pointer-lab-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pointer-lab-frontend
                port:
                  number: 80
